--- a/CSS_BoxModel.html
+++ b/CSS_BoxModel.html
@@ -53,8 +53,11 @@
      <h2>Layers</h2>
      <div class="layer1">Camada 1 </div>
      <div class="layer2">Camada 2 </div>
+     <figure>
+         <img src="img/css2.png" alt="imagem x">
+         <figcaption>Imagem ilustrativa</figcaption>
+     </figure>
      <h2>Float</h2>
-    
-
+         <p>A propriedade float em CSS determina que um elemento deve ser retirado do seu fluxo normal e colocado ao longo do lado direito ou esquerdo do seu box, onde textos e elementos em linha irão se posicionar ao seu redor.</p>
 </body>
 </html>
